[package]
name = "ed"
version = "0.1.5"
authors = ["Matt Bell <mappum@gmail.com>"]
edition = "2018"
description = "Encode and Decode traits"
license = "MIT"

[dependencies]
failure = "0.1.8"
seq-macro = "0.1.5"
ed-derive = { path = "./derive" }

[profile.bench]
lto = true

[profile.release]
lto = true

